src/objects/FieloAlpha__Reward__c.object
<CustomObject>
    <customHelpPage>FieloAlpha__RewardHelpBackEnd</customHelpPage>
    <fields>
        <fullName>FieloAlpha__AttachmentId__c</fullName>
        <description>Image of this reward.</description>
        <label>Image source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__AvailableDays__c</fullName>
        <description>Number of days that a voucher is enabled for use.</description>
        <inlineHelpText>Specify how many days the voucher will be usable since the redemption is created. Leave it blank if you do not want an expiration date.</inlineHelpText>
        <label>Reward Voucher Validity (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Kind of reward, divided by the owner in categories</description>
        <inlineHelpText>Choose the category from the list where this reward will appear on the member portal.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>That category belongs to another program. You must create the category in this program before trying to use it.</errorMessage>
            <filterItems>
                <field>$Source.FieloAlpha__Program__c</field>
                <operation>equals</operation>
                <valueField>FieloAlpha__Category__c.FieloAlpha__Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloAlpha__Category__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Prizes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__CondenserId__c</fullName>
        <label>Condenser Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Description__c</fullName>
        <description>Detail of the reward</description>
        <inlineHelpText>Detailed description of the product to be shown in the front end.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ExpirationDate__c</fullName>
        <description>Valid finish date for the reward</description>
        <inlineHelpText>Specify the expiration date of the reward.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ExternalName__c</fullName>
        <label>External Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__HasSegments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Segments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Image__c</fullName>
        <formula>&quot;&lt;img src=\&quot; servlet/servlet.FileDownload?file=&quot; &amp; FieloAlpha__AttachmentId__c &amp; &quot;\&quot;/&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__InstructionsRichText__c</fullName>
        <description>Allows to show more details on instructions</description>
        <label>Instructions RichText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Instructions__c</fullName>
        <description>Steps to get the reward detailed in vouchers, these instructions overwrite the instructions written in settings</description>
        <inlineHelpText>Steps to get the reward detailed in vouchers, these instructions overwrite the instructions written in settings</inlineHelpText>
        <label>Specific Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Intangible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated Field</description>
        <inlineHelpText>Click here to set an unlimited quantity for this reward.</inlineHelpText>
        <label>zz_deprecated_Unlimited Quantity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ItemsAvailableReadOnly__c</fullName>
        <formula>IF( ISPICKVAL(FieloAlpha__VoucherCreationMode__c  , &apos;Unlimited&apos;) , $Label.FieloAlpha__InfoRewardGenerateItemsWhenStockUnlimited ,  TEXT( FieloAlpha__Stock__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Items Available (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__PointsCant__c</fullName>
        <description>Value in points for the product</description>
        <inlineHelpText>Value of points to redeem the reward</inlineHelpText>
        <label>Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Price__c</fullName>
        <description>Value of the product</description>
        <inlineHelpText>Specify the cost of purchase of this reward. This will be used only for reporting purposes.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this reward belongs.</description>
        <inlineHelpText>Select the program to which this reward belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__QuantityAvailable__c</fullName>
        <description>Total stock</description>
        <inlineHelpText>The available quantity of the reward.</inlineHelpText>
        <label>Quantity Available</label>
        <summaryFilterItems>
            <field>FieloAlpha__RewardItem__c.FieloAlpha__Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FieloAlpha__RewardItem__c.FieloAlpha__IsCondenser__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloAlpha__RewardItem__c.FieloAlpha__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__QuantityComments__c</fullName>
        <label>Quantity Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__QuantityLikes__c</fullName>
        <label>Quantity Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__QuantityRedeem__c</fullName>
        <description>Total redeemed of the product</description>
        <inlineHelpText>The quantity of the reward that has been redeemed.</inlineHelpText>
        <label>Quantity Redeem</label>
        <summaryFilterItems>
            <field>FieloAlpha__RewardItem__c.FieloAlpha__Status__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloAlpha__RewardItem__c.FieloAlpha__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated Field</description>
        <inlineHelpText>Specify the rule that will apply toward the redemption of the prize.</inlineHelpText>
        <label>zz_deprecated_Segment</label>
        <referenceTo>FieloAlpha__RedemptionRule__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Prizes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__RewardFacilitator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <inlineHelpText>Specify the provider of this reward. Leave it blank if this reward has not provider</inlineHelpText>
        <label>Reward Facilitator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__StockWarning__c</fullName>
        <description>Stock quantity of this reward that will trigger an email warning you that the stock is low.</description>
        <inlineHelpText>Specify the stock limit alert. This will be used to send alert email.</inlineHelpText>
        <label>Stock Warning</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of units of this reward.</description>
        <label>Items Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__UniqueVoucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will create a voucher with two or more items of this reward.</description>
        <inlineHelpText>Check this option if you want to create a voucher in a redemption that have two or more items of this reward. This voucher will show the quantity field.</inlineHelpText>
        <label>Unique Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__VoucherCreationMode__c</fullName>
        <description>If voucher numbers are provided from a provider, vouchers are Preload, if system create them, are Random</description>
        <inlineHelpText>Choose the voucher creation mode</inlineHelpText>
        <label>Stock Management</label>
        <picklist>
            <picklistValues>
                <fullName>Controlled By Quantity</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Controlled By Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__isInstantReward__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this option if you want to give this reward for free (for no points) when the member does a special action.</description>
        <inlineHelpText>Check this option if you want to give this reward for free (for no points) when the member does a special action.</inlineHelpText>
        <label>Instant Reward</label>
        <type>Checkbox</type>
    </fields>
    <label>Reward</label>
    <listViews>
        <fullName>FieloAlpha__All_Rewards</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Description__c</columns>
        <columns>FieloAlpha__PointsCant__c</columns>
        <columns>FieloAlpha__VoucherCreationMode__c</columns>
        <columns>FieloAlpha__Stock__c</columns>
        <columns>FieloAlpha__ExpirationDate__c</columns>
        <columns>FieloAlpha__isInstantReward__c</columns>
        <columns>FieloAlpha__UniqueVoucher__c</columns>
        <columns>FieloAlpha__Program__c</columns>
        <columns>FieloAlpha__StockWarning__c</columns>
        <columns>FieloAlpha__Instructions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rewards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__AvailableRewards</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Description__c</columns>
        <columns>FieloAlpha__PointsCant__c</columns>
        <columns>FieloAlpha__ExpirationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Stock__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Available Rewards</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__Available_Days</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__AvailableDays__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloAlpha__AvailableDays__c</errorDisplayField>
        <errorMessage>value must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ChangeStockMode</fullName>
        <active>true</active>
        <errorConditionFormula>((ISPICKVAL(PRIORVALUE(FieloAlpha__VoucherCreationMode__c), &apos;Controlled By Quantity&apos;) &amp;&amp; (ISPICKVAL(FieloAlpha__VoucherCreationMode__c, &apos;Unlimited&apos;) || ISPICKVAL(FieloAlpha__VoucherCreationMode__c, &apos;Controlled By Item&apos;))) ||
(ISPICKVAL(PRIORVALUE(FieloAlpha__VoucherCreationMode__c), &apos;Controlled By Item&apos;) &amp;&amp; (ISPICKVAL(FieloAlpha__VoucherCreationMode__c, &apos;Unlimited&apos;) ||
ISPICKVAL(FieloAlpha__VoucherCreationMode__c, &apos;Controlled By Quantity&apos;)))) &amp;&amp;
FieloAlpha__Stock__c &gt; 0</errorConditionFormula>
        <errorDisplayField>FieloAlpha__VoucherCreationMode__c</errorDisplayField>
        <errorMessage>This operation is allowed when stock is equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__CheckCategoryProgram</fullName>
        <active>true</active>
        <description>Check if the Program from the Category chosen</description>
        <errorConditionFormula>AND( NOT(ISBLANK(FieloAlpha__Category__c)), FieloAlpha__Category__r.FieloAlpha__Program__c &lt;&gt; FieloAlpha__Program__c)</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Category__c</errorDisplayField>
        <errorMessage>The Program of the Category must be the same as the Reward.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloAlpha__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloAlpha__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__MultiVoucher</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__UniqueVoucher__c &amp;&amp;  ISPICKVAL(FieloAlpha__VoucherCreationMode__c, &apos;Controlled By Item&apos;)</errorConditionFormula>
        <errorMessage>Rewards controlled By Item with preloaded vouchers can&apos;t be unique voucher</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Points_Required</fullName>
        <active>true</active>
        <description>Validation to set allways a point value to the reward</description>
        <errorConditionFormula>ISNULL( FieloAlpha__PointsCant__c )</errorConditionFormula>
        <errorDisplayField>FieloAlpha__PointsCant__c</errorDisplayField>
        <errorMessage>The points of the reward are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Price_Possitive</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__Price__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Price__c</errorDisplayField>
        <errorMessage>value must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Quantity_Points_Positive</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__PointsCant__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FieloAlpha__PointsCant__c</errorDisplayField>
        <errorMessage>value must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Stock_Positive</fullName>
        <active>true</active>
        <description>Stock Must be positive</description>
        <errorConditionFormula>AND(IF(ISCHANGED(FieloAlpha__Stock__c) ,
IF( OR(ISBLANK(FieloAlpha__Stock__c) , FieloAlpha__Stock__c &lt; 0) ,
true,
false),
false), NOT( ISPICKVAL(FieloAlpha__VoucherCreationMode__c, &apos;Unlimited&apos;) ))</errorConditionFormula>
        <errorMessage>The stock should be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Unlimited</fullName>
        <active>false</active>
        <errorConditionFormula>FieloAlpha__Intangible__c = TRUE &amp;&amp;  ISPICKVAL( FieloAlpha__VoucherCreationMode__c , &apos;Preload&apos; )</errorConditionFormula>
        <errorMessage>A reward cannot be unlimited and preload at the same time</errorMessage>
    </validationRules>
</CustomObject>